fix: gap between ctas (#850)

--- a/src/v4/core/components/ConfirmModal/ConfirmModal.module.css
+++ b/src/v4/core/components/ConfirmModal/ConfirmModal.module.css
@@ -59,7 +59,7 @@
 }
 
 .popup__footer {
-  gap: 0.5rem;
+  gap: 0.75rem;
   display: flex;
   justify-content: center;
   padding: 1rem 1.5rem 1.5rem;
